Fix weird svg padding issue. A value of 0 would cause misalignment on mobile.

--- a/_sass/ckouufy/_gallery.scss
+++ b/_sass/ckouufy/_gallery.scss
@@ -99,6 +99,7 @@
   svg {
     margin-right: $small-rem-space;
     @extend %full-height;
+    padding: $small-em-space .1rem;
 
     fill: $blue-white;
   }
