--- a/_sass/ckouufy/_nav.scss
+++ b/_sass/ckouufy/_nav.scss
@@ -81,7 +81,7 @@ nav { @extend %full-height; }
 
     @media (min-width: 440px) {
       width: auto;
-      padding: $large-em-space $medium-rem-space $large-em-space 0;
+      padding: $large-em-space $medium-rem-space $large-em-space .1rem;
 
       opacity: 1;
     }
